# ai-researcher

./: .env.example  .flake8  .gitignore  Makefile  README.md  TODO.md  pyproject.toml
.run/: Main - API.run.xml  Streamlit Render.run.xml  Streamlit.run.xml  main.py.run.xml
ai_researcher/: main.py  openai_models.py  paths.py  utils.py
ai_researcher/data/: db.py
ai_researcher/document_loaders/: epub_document_loader.py  epub_loader.py
ai_researcher/summarizers/: prose_summarizer.py
ai_researcher/utils/: common_utils.py  db.py
frontend/: index.html  package.json
frontend/src/: main.tsx
frontend/src/api/: apis.ts
frontend/src/components/: clickable-text.tsx  search-page.tsx  search-results-page.tsx
frontend/src/components/custom/: clickable-text.tsx  input-numeric.tsx  loading.tsx  slider-box.tsx  spinner.tsx
frontend/src/components/ui/: progress.tsx  slider.tsx  switch.tsx  typography.tsx
frontend/src/pages/: search-results-page.tsx
frontend/src/pages/search-page/: context.tsx  reducer.tsx  search-page.tsx  step1-ui.tsx  step2-ui.tsx  step3-ui.tsx  types.ts
frontend/src/scaffolding/: App.tsx  error-boundary.tsx
prompt_templates/summarizers/: biography_full.txt  fiction_full.txt  popular_science_full.txt  prose_full.txt
