[tool.poetry]
name = "ai-researcher"
version = "0.1.0"
description = ""
authors = ["Samuel Lehotsky <lehotsky@atlas.sk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
openai = "^1.3.7"
langchain = "^0.0.351"
python-dotenv = "^1.0.0"
unstructured = {extras = ["all-docs"], version = "^0.11.4"}
pypandoc-binary = "^1.12"
ebooklib = "^0.18"
beautifulsoup4 = "^4.12.2"
tiktoken = "^0.5.2"
streamlit = "^1.29.0"
pyautogen = {extras = ["teachable"], version = "^0.2.2"}
docker = "^7.0.0"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
sse-starlette = "^1.8.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = {extras = ["d"], version = "^23.11.0"}
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
line_length = 80

[tool.poetry.scripts]
start = 'ai_researcher.main:main'
